src/lib/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Instruction: peg$parseInstruction },
      peg$startRuleFunction  = peg$parseInstruction,

      peg$c0 = "mov",
      peg$c1 = peg$literalExpectation("MOV", true),
      peg$c2 = ",",
      peg$c3 = peg$literalExpectation(",", false),
      peg$c4 = function(name, target, source) { return { tag: "Instruction", type: "Memory", name: name, operands: [target, source] }; },
      peg$c5 = "add",
      peg$c6 = peg$literalExpectation("ADD", true),
      peg$c7 = "sub",
      peg$c8 = peg$literalExpectation("SUB", true),
      peg$c9 = "and",
      peg$c10 = peg$literalExpectation("AND", true),
      peg$c11 = "or",
      peg$c12 = peg$literalExpectation("OR", true),
      peg$c13 = function(name, target, source) { return { tag: "Instruction", type: "Arithmetic", name: name, operands: [target, source] }; },
      peg$c14 = function(cast, value) { return { tag: "Cast", size: cast, value: value }; },
      peg$c15 = "[",
      peg$c16 = peg$literalExpectation("[", false),
      peg$c17 = "]",
      peg$c18 = peg$literalExpectation("]", false),
      peg$c19 = function(label, index) { return { tag: "Label", value: label.value, deref: true, index: index }; },
      peg$c20 = function(number, index) { return { tag: "Number", value: number.value, deref: true, index: index }; },
      peg$c21 = ".",
      peg$c22 = peg$literalExpectation(".", false),
      peg$c23 = function(local, target) { return { tag: "Label", value: local !== null ? ("." + target.value) : target.value }; },
      peg$c24 = function(baseReg, index) {
          	return {
          		tag: "Mem",
              	baseRegister: baseReg,
              	index: index
          	};
          },
      peg$c25 = "+",
      peg$c26 = peg$literalExpectation("+", false),
      peg$c27 = "*",
      peg$c28 = peg$literalExpectation("*", false),
      peg$c29 = function(register, multiplier) { return { register: register, multiplier: multiplier.value } },
      peg$c30 = "-",
      peg$c31 = peg$literalExpectation("-", false),
      peg$c32 = function(index, operator, constant) {
                          	if (operator === "-")
                          	{
                          		constant.value *= -1;
                          	}
                          	return constant;
                          },
      peg$c33 = function(index, constant) { return { index: index, constant: constant }; },
      peg$c34 = "eax",
      peg$c35 = peg$literalExpectation("eax", true),
      peg$c36 = "ebx",
      peg$c37 = peg$literalExpectation("ebx", true),
      peg$c38 = "ecx",
      peg$c39 = peg$literalExpectation("ecx", true),
      peg$c40 = "edx",
      peg$c41 = peg$literalExpectation("edx", true),
      peg$c42 = "esp",
      peg$c43 = peg$literalExpectation("esp", true),
      peg$c44 = "ebp",
      peg$c45 = peg$literalExpectation("ebp", true),
      peg$c46 = "esi",
      peg$c47 = peg$literalExpectation("esi", true),
      peg$c48 = "edi",
      peg$c49 = peg$literalExpectation("edi", true),
      peg$c50 = "eip",
      peg$c51 = peg$literalExpectation("eip", true),
      peg$c52 = "r8d",
      peg$c53 = peg$literalExpectation("r8d", true),
      peg$c54 = "r9d",
      peg$c55 = peg$literalExpectation("r9d", true),
      peg$c56 = "r10d",
      peg$c57 = peg$literalExpectation("r10d", true),
      peg$c58 = "r11d",
      peg$c59 = peg$literalExpectation("r11d", true),
      peg$c60 = "r12d",
      peg$c61 = peg$literalExpectation("r12d", true),
      peg$c62 = "r13d",
      peg$c63 = peg$literalExpectation("r13d", true),
      peg$c64 = "r14d",
      peg$c65 = peg$literalExpectation("r14d", true),
      peg$c66 = "r15d",
      peg$c67 = peg$literalExpectation("r15d", true),
      peg$c68 = function() { return { tag: "Reg", name: text(), size: 32 }; },
      peg$c69 = "ax",
      peg$c70 = peg$literalExpectation("ax", true),
      peg$c71 = "bx",
      peg$c72 = peg$literalExpectation("bx", true),
      peg$c73 = "cx",
      peg$c74 = peg$literalExpectation("cx", true),
      peg$c75 = "dx",
      peg$c76 = peg$literalExpectation("dx", true),
      peg$c77 = "cs",
      peg$c78 = peg$literalExpectation("cs", true),
      peg$c79 = "ds",
      peg$c80 = peg$literalExpectation("ds", true),
      peg$c81 = "ss",
      peg$c82 = peg$literalExpectation("ss", true),
      peg$c83 = "es",
      peg$c84 = peg$literalExpectation("es", true),
      peg$c85 = "fs",
      peg$c86 = peg$literalExpectation("fs", true),
      peg$c87 = "gs",
      peg$c88 = peg$literalExpectation("gs", true),
      peg$c89 = "sp",
      peg$c90 = peg$literalExpectation("sp", true),
      peg$c91 = "bp",
      peg$c92 = peg$literalExpectation("bp", true),
      peg$c93 = "si",
      peg$c94 = peg$literalExpectation("si", true),
      peg$c95 = "ip",
      peg$c96 = peg$literalExpectation("ip", true),
      peg$c97 = "r8w",
      peg$c98 = peg$literalExpectation("r8w", true),
      peg$c99 = "r9w",
      peg$c100 = peg$literalExpectation("r9w", true),
      peg$c101 = "r10w",
      peg$c102 = peg$literalExpectation("r10w", true),
      peg$c103 = "r11w",
      peg$c104 = peg$literalExpectation("r11w", true),
      peg$c105 = "r12w",
      peg$c106 = peg$literalExpectation("r12w", true),
      peg$c107 = "r13w",
      peg$c108 = peg$literalExpectation("r13w", true),
      peg$c109 = "r14w",
      peg$c110 = peg$literalExpectation("r14w", true),
      peg$c111 = "r15w",
      peg$c112 = peg$literalExpectation("r15w", true),
      peg$c113 = function() { return { tag: "Reg", name: text(), size: 16 } },
      peg$c114 = "al",
      peg$c115 = peg$literalExpectation("al", true),
      peg$c116 = "ah",
      peg$c117 = peg$literalExpectation("ah", true),
      peg$c118 = "bl",
      peg$c119 = peg$literalExpectation("bl", true),
      peg$c120 = "bh",
      peg$c121 = peg$literalExpectation("bh", true),
      peg$c122 = "cl",
      peg$c123 = peg$literalExpectation("cl", true),
      peg$c124 = "ch",
      peg$c125 = peg$literalExpectation("ch", true),
      peg$c126 = "dl",
      peg$c127 = peg$literalExpectation("dl", true),
      peg$c128 = "dh",
      peg$c129 = peg$literalExpectation("dh", true),
      peg$c130 = "spl",
      peg$c131 = peg$literalExpectation("spl", true),
      peg$c132 = "bpl",
      peg$c133 = peg$literalExpectation("bpl", true),
      peg$c134 = "sil",
      peg$c135 = peg$literalExpectation("sil", true),
      peg$c136 = "dil",
      peg$c137 = peg$literalExpectation("dil", true),
      peg$c138 = "r8b",
      peg$c139 = peg$literalExpectation("r8b", true),
      peg$c140 = "r9b",
      peg$c141 = peg$literalExpectation("r9b", true),
      peg$c142 = "r10b",
      peg$c143 = peg$literalExpectation("r10b", true),
      peg$c144 = "r11b",
      peg$c145 = peg$literalExpectation("r11b", true),
      peg$c146 = "r12b",
      peg$c147 = peg$literalExpectation("r12b", true),
      peg$c148 = "r13b",
      peg$c149 = peg$literalExpectation("r13b", true),
      peg$c150 = "r14b",
      peg$c151 = peg$literalExpectation("r14b", true),
      peg$c152 = "r15b",
      peg$c153 = peg$literalExpectation("r15b", true),
      peg$c154 = function() { return { tag: "Reg", name: text(), size: 8 } },
      peg$c155 = "byte",
      peg$c156 = peg$literalExpectation("BYTE", true),
      peg$c157 = function() { return 8; },
      peg$c158 = "word",
      peg$c159 = peg$literalExpectation("WORD", true),
      peg$c160 = function() { return 16; },
      peg$c161 = "dword",
      peg$c162 = peg$literalExpectation("DWORD", true),
      peg$c163 = function() { return 32; },
      peg$c164 = "",
      peg$c165 = function() { return 0; },
      peg$c166 = /^[a-zA-Z_]/,
      peg$c167 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false),
      peg$c168 = /^[a-zA-Z_0-9]/,
      peg$c169 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", ["0", "9"]], false, false),
      peg$c170 = function() { return { tag: "Identifier", value: text() }; },
      peg$c171 = "0x",
      peg$c172 = peg$literalExpectation("0x", false),
      peg$c173 = /^[0-9a-fA-F]/,
      peg$c174 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false),
      peg$c175 = function() { return { tag: "Number", value: parseInt(text(), 16), size: 4 }; },
      peg$c176 = /^[0-9]/,
      peg$c177 = peg$classExpectation([["0", "9"]], false, false),
      peg$c178 = function() { return { tag: "Number", value: parseInt(text(), 10), size: 4 }; },
      peg$c179 = peg$otherExpectation("whitespace"),
      peg$c180 = /^[ \t\r]/,
      peg$c181 = peg$classExpectation([" ", "\t", "\r"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseInstruction() {
    var s0;

    s0 = peg$parseMemoryInstruction();
    if (s0 === peg$FAILED) {
      s0 = peg$parseArithmeticInstruction();
    }

    return s0;
  }

  function peg$parseMemoryInstruction() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$currPos;
    if (input.substr(peg$currPos, 3).toLowerCase() === peg$c0) {
      s2 = input.substr(peg$currPos, 3);
      peg$currPos += 3;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos);
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseWritableExpression();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 44) {
              s5 = peg$c2;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c3); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseReadableExpression();
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c4(s1, s3, s7);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseArithmeticInstruction() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$currPos;
    if (input.substr(peg$currPos, 3).toLowerCase() === peg$c5) {
      s2 = input.substr(peg$currPos, 3);
      peg$currPos += 3;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c6); }
    }
    if (s2 === peg$FAILED) {
      if (input.substr(peg$currPos, 3).toLowerCase() === peg$c7) {
        s2 = input.substr(peg$currPos, 3);
        peg$currPos += 3;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s2 === peg$FAILED) {
        if (input.substr(peg$currPos, 3).toLowerCase() === peg$c9) {
          s2 = input.substr(peg$currPos, 3);
          peg$currPos += 3;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s2 === peg$FAILED) {
          if (input.substr(peg$currPos, 2).toLowerCase() === peg$c11) {
            s2 = input.substr(peg$currPos, 2);
            peg$currPos += 2;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c12); }
          }
        }
      }
    }
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos);
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseWritableExpression();
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 44) {
            s4 = peg$c2;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c3); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseReadableExpression();
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c13(s1, s3, s6);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseWritableExpression() {
    var s0, s1, s2, s3;

    s0 = peg$parseRegister();
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseSizeCast();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseRegisterDereferenceExpression();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c14(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseSizeCast();
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseAddressDereferenceExpression();
            if (s3 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c14(s1, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }
    }

    return s0;
  }

  function peg$parseReadableExpression() {
    var s0, s1, s2, s3;

    s0 = peg$parseRegister();
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseSizeCast();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseRegisterDereferenceExpression();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c14(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseSizeCast();
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseAddressDereferenceExpression();
            if (s3 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c14(s1, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseSizeCast();
          if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            if (s2 !== peg$FAILED) {
              s3 = peg$parseLabelExpression();
              if (s3 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c14(s1, s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseSizeCast();
            if (s1 !== peg$FAILED) {
              s2 = peg$parse_();
              if (s2 !== peg$FAILED) {
                s3 = peg$parseNumber();
                if (s3 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c14(s1, s3);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseAddressDereferenceExpression() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 91) {
      s1 = peg$c15;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c16); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseLabelExpression();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseIndexExpression();
            if (s5 === peg$FAILED) {
              s5 = null;
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 93) {
                  s7 = peg$c17;
                  peg$currPos++;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c18); }
                }
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c19(s3, s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 91) {
        s1 = peg$c15;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseNumber();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseIndexExpression();
              if (s5 === peg$FAILED) {
                s5 = null;
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 93) {
                    s7 = peg$c17;
                    peg$currPos++;
                  } else {
                    s7 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c18); }
                  }
                  if (s7 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c20(s3, s5);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseLabelExpression() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 46) {
      s1 = peg$c21;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c22); }
    }
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseIdentifier();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c23(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseRegisterDereferenceExpression() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
